# email-nurse

./: .env.example  .gitignore  .sysm-rollout.md  BUGS.md  CLAUDE.md  EMAIL_AUDITS.md  README.md  ROADMAP.md  log-viewer.sh  pyproject.toml  what_am_i.md
.task-tracking/: TASKS.md
.tasks/: README.md  TASKS.md
config/: autopilot.yaml.example  rules.yaml.example  templates.yaml.example
docs/: README.md  ai-providers.md  architecture.md  configuration.md  rules-reference.md  templates-reference.md  troubleshooting.md
examples/launchd/: README.md  com.email-nurse-backup.plist  com.email-nurse-digest.plist  com.email-nurse-mail-restart.plist  com.email-nurse-watcher.plist  com.email-nurse.plist
prod-configs/config/: .env.example  autopilot.yaml  templates.yaml
prod-configs/launchd/: com.bss.email-nurse-backup.plist  com.bss.email-nurse-digest.plist  com.bss.email-nurse.plist  (+2 more)
scripts/: autopilot-start.sh  autopilot-stop.sh  backup-autopilot.sh  backup-config.sh  csquare_cleanup.py  csquare_cleanup_log_20260206.jsonl  deploy.sh  deploy.sh.bak  doctor.sh  install.sh  keychain.sh  mail-restart.sh  mode.sh  performance_review.py  restart.sh  uninstall.sh
sys-scripts/: backup-autopilot.sh  brew-cleanup.sh  brew-sysm-update.sh  brew-upgrade-all.sh  email-nurse-autopilot.sh  email-nurse-digest.sh  email-nurse-ops-db.sh  email-nurse-ops-health.sh  email-nurse-ops-stuck.sh  log-rotate.sh  mail-restart.sh
tests/: __init__.py  conftest.py  test_applescript.py  test_conditions.py  test_rules_engine.py  test_secondary_action.py  test_sysm_integration.py  test_sysm_wrapper.py
(+64 files in other folders)
